compiler/tests/should-pass/code-generation/cleartext/ConstantIf.via
host alice

fun main() {
    val x: int = input int from alice;
    if (true) {
        output x to alice;
    }
}
