compiler/tests/should-fail/UndefinedVariable3.via
/* UndefinedNameError */

fun main() {
    val x: int = x;
}
